# AnswerMe-AI

./: .env.example  .gitignore  LICENSE  README.md  brain.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  health.py  users.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  redis.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/migrations/: README.md  env.py  script.py.mako
backend/app/db/migrations/versions/: 0001_create_users_table.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: __init__.py  user_repository.py
backend/app/schemas/: __init__.py  health.py  token.py  user.py
backend/app/services/: __init__.py  auth_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py
docker/nginx/: .gitkeep  nginx.conf  nginx.dev.conf
docker/postgres/: .gitkeep  init.sql
docs/: api.md  architecture.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  nginx.conf
scripts/: seed.sh  setup.sh
